fixed scrollbar on responsive header menu

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -120,6 +120,9 @@ nav {
     transform: translateX(0); 
 }
 
+.no-scroll {
+    overflow: hidden;
+  }
 
 @media(max-width:787px) {
     nav {
